[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/player1.png" type="Texture" id=3]
[ext_resource path="res://HealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/player2.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "dead",
"speed": 12.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.621, 28.0337 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 57.7434, 39.9826 )
collision_layer = 4
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 6.15831, -0.293243 )
frames = SubResource( 1 )
animation = "run"
frame = 1
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = -3000
limit_right = 1000
limit_bottom = 600
limit_smoothed = true
smoothing_enabled = true
editor_draw_limits = true

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5.36091, -1.04971 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 61.0131, 8.75786 )

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
margin_left = -19.2644
margin_top = -57.0198
margin_right = 30.7356
margin_bottom = -46.0198

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ChangeSceneTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ChangeSceneTimer" to="." method="_on_ChangeSceneTimer_timeout"]
